Fix tiny line at the top of class tree scrollbar.

--- a/template/resources/sass/style.scss
+++ b/template/resources/sass/style.scss
@@ -951,3 +951,6 @@ pre, code, kbd, samp, tt {
 
 .wrapper {
   position: relative; }
+
+.x-scroller-vertical {
+  border: 0; }
